--- a/WebUI/wwwroot/app/sass/main.sass
+++ b/WebUI/wwwroot/app/sass/main.sass
@@ -9,6 +9,26 @@
 	background-color: $accent
 	color: #fff
 
+.m-b20
+	margin-bottom: 20px 
+
+.m-b40
+	margin-bottom: 40px
+
+.button
+	background-color: inherit
+	border-radius: 15px
+	padding: 0.7rem 1.1rem
+	border: none
+	cursor: pointer
+
+.button-default
+	background-color: #03a9f4
+	color: #fff
+	transition: 0.3s
+	&:hover 
+		background-color: #007ac1
+
 body, html
 	width: 100%
 	height: 100%
@@ -40,6 +60,33 @@ body, html
 b, strong
 	font-weight: bold
 
+.login-wrapper
+	float: right
+	background-color: #fff
+	width: 30vw
+	height: 100%
+	position: relative
+	.form-wrapper
+		width: 100%
+		text-align: center
+		padding: 10px 40px
+		position: absolute
+		top: 5%
+		h1
+			font-weight: normal
+	.form-control
+		width: 100%
+		padding: .7rem 1.1rem
+		border: none
+		border-bottom: 1px solid #e6e6e6
+		transition: 0.5s 
+		&:focus
+			border-bottom: 1px solid #03a9f4
 
+.account-button
+	width: 100%
+	text-transform: uppercase
+	padding: 1rem 1.1rem
+	border-radius: 50px
 
 @import "media" // Always at the end
