--- a/WebUI/Views/Account/Index.cshtml
+++ b/WebUI/Views/Account/Index.cshtml
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <script src="@Url.Content("js/scripts.min.js")"></script>
+    <script src="@Url.Content("~/app/js/scripts.min.js")"></script>
 
 </body>
 </html>
