--- a/WebUI/wwwroot/app/sass/main.sass
+++ b/WebUI/wwwroot/app/sass/main.sass
@@ -64,7 +64,7 @@ b, strong
 	float: right
 	background-color: #fff
 	width: 30vw
-	height: 100%
+	min-height: 100%
 	position: relative
 	.form-wrapper
 		width: 100%
