логотипчик на страницу авторизации

--- a/WebUI/wwwroot/app/sass/main.sass
+++ b/WebUI/wwwroot/app/sass/main.sass
@@ -64,7 +64,7 @@ b, strong
 	float: right
 	background-color: #fff
 	width: 30vw
-	min-height: 100%
+	min-height: 100vh
 	position: relative
 	.form-wrapper
 		width: 100%
@@ -88,5 +88,14 @@ b, strong
 	text-transform: uppercase
 	padding: 1rem 1.1rem
 	border-radius: 50px
+
+.account-background
+	position: absolute
+	height: 100%
+	width: 70vw
+	background-position: center center
+	background-repeat: no-repeat
+	opacity: 0.6
+
 
 @import "media" // Always at the end
