--- a/WebUI/Views/Account/Index.cshtml
+++ b/WebUI/Views/Account/Index.cshtml
@@ -32,6 +32,11 @@
 
 <body style="background-color: #ede4e4">
 
+    <div class="account-background" style="background-image: url(@Url.Content("~/app/img/sushuworld.jpg"))">
+    </div>
+
+    
+
     <div class="login-wrapper">
         <div class="form-wrapper">
             <form method="post" action="/Account/Login">
