--- a/WebUI/Views/Shared/_ManagerLayout.cshtml
+++ b/WebUI/Views/Shared/_ManagerLayout.cshtml
@@ -47,9 +47,15 @@
             </div>
             <ul class="aside-menu">
                 <li>
-                    <a href="#">
+                    <a href="/Manager/Index">
                         <i class="fas fa-users"></i>
                         <span>Менеджеры</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Client/Index">
+                        <i class="far fa-address-book"></i>
+                        <span>Клиенты</span>
                     </a>
                 </li>
             </ul>
