--- a/WebUI/Views/Client/Index.cshtml
+++ b/WebUI/Views/Client/Index.cshtml
@@ -6,33 +6,31 @@
 
 <div class="content">
     <div class="page-header">
-        <h1>Список Менеджеров</h1>
-        <p>Здесь представлена информация о менеджерах в компании</p>
+        <h1>Список Клиентов</h1>
+        <p>Здесь представлена информация о клиентах компании</p>
     </div>
     <section class="table">
         <div class="portlet">
             <div class="portlet-header">
-                Менеджеры
+                Клиенты
             </div>
             <div class="portlet-body">
                 <div class="table-header">
-                    <a href="/Manager/Create" class="button button-default">Добавить</a>
+                    <a href="/Client/Create" class="button button-default">Добавить</a>
                 </div>
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Логин</th>
-                            <th>Пароль</th>
+                            <th>Имя</th>
                             <th>Телефон</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach(var manager in Model)
+                        @foreach (var client in Model)
                         {
                             <tr>
-                                <td>@manager.Login</td>
-                                <td>@manager.Password</td>
-                                <td>@manager.Phone</td>
+                                <td>@client.Title</td>
+                                <td>@client.Phone</td>
                             </tr>
                         }
                     </tbody>
@@ -41,5 +39,4 @@
         </div>
     </section>
 </div>
-
 
