--- a/WebUI/wwwroot/app/sass/main.sass
+++ b/WebUI/wwwroot/app/sass/main.sass
@@ -268,35 +268,35 @@ main
 			vertical-align: top
 			border-bottom: 1px solid #dee2e6
 			padding: 0.8rem
+.form-group-wrapper
+	.form-group
+		padding: 20px 0px
+		label
+			width: 100%
+			text-align: right 
+			padding: 
+				top: 10px
+				left: 15px
+				right: 15px
+		.form-control
+			color: #1e1e1e
+			display: block
+			width: 100%
+			height: calc(2.25rem + 2px)
+			margin-top: 10px
+			padding: .375rem .75rem
+			font-size: 1rem
+			background-color: #fff
+			border-radius: 10px
+			line-height: 1.6
 
-.form-group
-	padding: 20px 0px
-	label
-		width: 100%
-		text-align: right 
-		padding: 
-			top: 10px
-			left: 15px
-			right: 15px
-	.form-control
-		color: #1e1e1e
-		display: block
-		width: 100%
-		height: calc(2.25rem + 2px)
-		margin-top: 10px
-		padding: .375rem .75rem
-		font-size: 1rem
-		background-color: #fff
-		border-radius: 10px
-		line-height: 1.6
-
-.form-footer
-	text-align: right
-	margin-top: 20px
+	.form-footer
+		text-align: right
+		margin-top: 20px
 
 
-.form-group:nth-child(odd)
-	background-color: #f5f7fa
-	border-bottom: 1px solid #ebeff5			
+	.form-group:nth-child(odd)
+		background-color: #f5f7fa
+		border-bottom: 1px solid #ebeff5			
 @import "media" // Always at the end
 
