--- a/WebUI/Views/Shared/_ManagerLayout.cshtml
+++ b/WebUI/Views/Shared/_ManagerLayout.cshtml
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <link rel="stylesheet" href="@Url.Content("~/app/css/main.min.css")">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="@Url.Content("~/app/js/scripts.min.js")"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
 </head>
 
@@ -72,7 +75,7 @@
     </main>
     
 
-    <script src="@Url.Content("~/app/js/scripts.min.js")"></script>
+    
 </body>
 
 
