--- a/WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/WebUI/Views/Shared/_AdminLayout.cshtml
@@ -46,7 +46,13 @@
             <div class="logo m-b40">
                 <h2>Мир Суши</h2>
             </div>
-            <ul class="aside-menu">               
+            <ul class="aside-menu">
+                <li>
+                    <a href="/Manager/Index">
+                        <i class="fas fa-users"></i>
+                        <span>Менеджеры</span>
+                    </a>
+                </li>
                 <li>
                     <a href="/Client/Index">
                         <i class="far fa-address-book"></i>
@@ -54,7 +60,7 @@
                     </a>
                 </li>
             </ul>
-        </div>       
+        </div>
         <div class="aside-background" style="background-image: url('@Url.Content("~/app/img/aside-bg.png")')">
 
         </div>
@@ -63,11 +69,11 @@
     <main>
         <div class="content-wrapper">
             @RenderBody()
-        </div>       
+        </div>
     </main>
-    
 
-    
+
+
 </body>
 
 
