--- a/WebUI/Views/Client/Index.cshtml
+++ b/WebUI/Views/Client/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@using WebUI.Services.Abstract
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_ManagerLayout.cshtml";
+    Layout = account.GetLayout();
+    @inject IAccountInformationService account
 }
 
 <div class="content">
