--- a/WebUI/Views/Manager/Create.cshtml
+++ b/WebUI/Views/Manager/Create.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@using WebUI.Services.Abstract
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_ManagerLayout.cshtml";
+    Layout = account.GetLayout();
+    @inject IAccountInformationService account
 }
 
 <div class="content">
@@ -44,7 +45,7 @@
                         <div class="form-footer">
                             <button type="submit" class="button button-default">Отправить</button>
                         </div>
-                    </div>                  
+                    </div>
                 </form>
             </div>
         </div>
