--- a/WebUI/Views/Manager/Detail.cshtml
+++ b/WebUI/Views/Manager/Detail.cshtml
@@ -51,8 +51,13 @@
             </div>
             <div id="calls" class="portlet-body">
                 <div class="table-header">
-                    <div class="form-group">
-                        <input class="form-control" type="date" v-model="dateForFilter" />
+                    <div class="form-group display-inline">
+                        <label>Дата с:</label>
+                        <input class="form-control" type="text" placeholder="Дата с:" onfocus="(this.type='date')" onblur="(this.type='text')" v-model="dateFrom" />
+                    </div>
+                    <div class="form-group display-inline">
+                        <label>Дата по:</label>
+                        <input class="form-control" type="text" placeholder="Дата по:" onfocus="(this.type='date')" onblur="(this.type='text')" v-model="dateFor" />
                     </div>
                 </div>
                 <table class="table">
@@ -97,14 +102,37 @@
         el: "#calls",
         data: {
             calls: [],
-            dateForFilter: moment().format("DD.MM.YYYY")
+            dateFrom: moment().format("YYYY-MM-DD"),
+            dateFor: moment().format("YYYY-MM-DD")
         },
         watch: {
-            dateForFilter: function () {
+            dateFrom: function () {
                 this.calls = [];
 
                 options.body = JSON.stringify({
-                    date: moment(this.dateForFilter, "YYYY-MM-DD").format("DD.MM.YYYY"),
+                    dateFrom: moment(this.dateFrom, "YYYY-MM-DD").format("DD.MM.YYYY"),
+                    dateFor: moment(this.dateFor, "YYYY-MM-DD").format("DD.MM.YYYY"),
+                    managerId: managerId
+                });
+
+                fetch("/Manager/GetCalls", options)
+                    .then(response => response.json())
+                    .then(data => data.forEach(item => {
+                        this.calls.push({
+                            date: item.date,
+                            clientTitle: item.clientTitle,
+                            src_Number: item.src_Number,
+                            duration: item.duration.replace(/\,/g, ':'),
+                            recording: item.recording
+                        });
+                    }))
+            },
+            dateFor: function () {
+                this.calls = [];
+
+                options.body = JSON.stringify({
+                    dateFrom: moment(this.dateFrom, "YYYY-MM-DD").format("DD.MM.YYYY"),
+                    dateFor: moment(this.dateFor, "YYYY-MM-DD").format("DD.MM.YYYY"),
                     managerId: managerId
                 });
 
@@ -123,7 +151,8 @@
         },
         created: function () {
             options.body = JSON.stringify({
-                date: moment().format("DD.MM.YYYY"),
+                dateFrom: moment().format("DD.MM.YYYY"),
+                dateFor: moment().format("DD.MM.YYYY"),
                 managerId: managerId
             })
 
