--- a/WebUI/wwwroot/src/app/account/components/login/login.component.html
+++ b/WebUI/wwwroot/src/app/account/components/login/login.component.html
@@ -1,3 +1,9 @@
-<p>
-  login works!
-</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">  
+  <label>Логин</label>
+  <input type="text" formControlName="login">
+
+  <label>Пароль</label>
+  <input type="password" formControlName="password">
+
+  <button>Войти</button>
+</form>
