--- a/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
@@ -1,3 +1,19 @@
-<p>
-  user-list works!
-</p>
+<table>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Имя</th>
+      <th>Пароль</th>
+      <th>Телефон</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let manager of managers">
+      <td>{{manager.id}}</td>
+      <td>{{manager.login}}</td>
+      <td>{{manager.password}}</td>
+      <td>{{manager.phone}}</td>
+    </tr>
+  </tbody>
+</table>
+
