--- a/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
@@ -1,23 +1,28 @@
-<div class="table-wrapper mat-elevation-z8">
-  <table mat-table [dataSource]="managers">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>id</th>
-      <td mat-cell *matCellDef="let manager">{{manager.id}}</td>
-    </ng-container>
-    <ng-container matColumnDef="login">
-      <th mat-header-cell *matHeaderCellDef>Имя</th>
-      <td mat-cell *matCellDef="let manager">{{manager.login}}</td>
-    </ng-container>
-    <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef>Пароль</th>
-      <td mat-cell *matCellDef="let manager">{{manager.password}}</td>
-    </ng-container>
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef>Телефон</th>
-      <td mat-cell *matCellDef="let manager">{{manager.phone}}</td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
-</div>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Список Менеджеров</mat-card-title>
+  </mat-card-header>
+<mat-card-content>
+    <table mat-table [dataSource]="managers" >
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>id</th>
+        <td mat-cell *matCellDef="let manager">{{manager.id}}</td>
+      </ng-container>
+      <ng-container matColumnDef="login">
+        <th mat-header-cell *matHeaderCellDef>Имя</th>
+        <td mat-cell *matCellDef="let manager">{{manager.login}}</td>
+      </ng-container>
+      <ng-container matColumnDef="password">
+        <th mat-header-cell *matHeaderCellDef>Пароль</th>
+        <td mat-cell *matCellDef="let manager">{{manager.password}}</td>
+      </ng-container>
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef>Телефон</th>
+        <td mat-cell *matCellDef="let manager">{{manager.phone}}</td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
+</mat-card-content>
+</mat-card>
