--- a/WebUI/wwwroot/src/styles.sass
+++ b/WebUI/wwwroot/src/styles.sass
@@ -1,6 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
 
+body 
+    background-color: #f5f7fa
 
+ul
+	margin: 0
+	padding: 0
+	li
+		list-style: none
+
+a
+	color: inherit
+	text-decoration: none
+	&:hover
+		text-decoration: none
+
+main
+	position: relative
+	height: 100vh
+	.content-wrapper
+        position: relative
+        max-height: 100%
+        height: 100%
+        min-height: 100%
+        width: 100%
+        padding: 85px 20px 20px 270px
+        box-sizing: border-box
+
+		
 
