--- a/WebUI/wwwroot/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/manager/components/client-list/client-list.component.html
@@ -6,19 +6,19 @@
    <table mat-table [dataSource]="clients">
      <ng-container matColumnDef="id">
        <th mat-header-cell *matHeaderCellDef> # </th>
-       <td mat-cell *matCellDef="let client"> {{client.client.id}} </td>
+       <td mat-cell *matCellDef="let client"> {{client.id}} </td>
      </ng-container>
      <ng-container matColumnDef="title">
        <th mat-header-cell *matHeaderCellDef> Имя </th>
-       <td mat-cell *matCellDef="let client"> {{client.client.title}} </td>
+       <td mat-cell *matCellDef="let client"> {{client.title}} </td>
      </ng-container>
      <ng-container matColumnDef="phone">
        <th mat-header-cell *matHeaderCellDef> Телефон </th>
-       <td mat-cell *matCellDef="let client"> {{client.client.phone}} </td>
+       <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
      </ng-container>
-     <ng-container matColumnDef="amountCalls">
+     <ng-container matColumnDef="plannedAmountCalls">
        <th mat-header-cell *matHeaderCellDef> Запланировано звонков </th>
-       <td mat-cell *matCellDef="let client"> {{client.monthlyCallPlan.amountCalls}} </td>
+       <td mat-cell *matCellDef="let client"> {{client.plannedAmountCalls}} </td>
      </ng-container>   
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -26,4 +26,3 @@
    <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
-<button (click)="yo()">Показать клиентов</button>
