--- a/WebUI/wwwroot/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/WebUI/wwwroot/src/app/admin/layout/sidebar/sidebar.component.html
@@ -5,13 +5,13 @@
         </div>
         <ul class="aside-menu">
             <li>
-                <a href="/Manager/Index">
+                <a routerLink="users" routerLinkActive="active">
                     <i class="fas fa-users"></i>
                     <span>Менеджеры</span>
                 </a>
             </li>
             <li>
-                <a href="/Client/Index">
+                <a routerLink="clients" routerLinkActive="active">
                     <i class="far fa-address-book"></i>
                     <span>Клиенты</span>
                 </a>
