--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -16,6 +16,17 @@
         <th mat-header-cell *matHeaderCellDef>Телефон</th>
         <td mat-cell *matCellDef="let client">{{client.phone}}</td>
       </ng-container>
+      <ng-container matColumnDef="plannedAmountCalls">
+        <th mat-header-cell *matHeaderCellDef> Запланировано звонков </th>
+        <td mat-cell *matCellDef="let client">
+          <ng-container *ngIf="client.plannedAmountCalls">
+            {{client.plannedAmountCalls}}
+          </ng-container>
+          <ng-container *ngIf="!client.plannedAmountCalls">
+              <button mat-button> Не составлено </button>
+          </ng-container>          
+        </td>
+      </ng-container>            
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
