--- a/WebUI/wwwroot/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/manager/components/client-list/client-list.component.html
@@ -1,46 +1,30 @@
-<ng-container *ngIf="callPlanningDisplayed">
-  <h3 mat-dialog-title>Планирование звонков</h3>
-  <div mat-dialog-container>
-    <label>Клиент: {{selectedClient.title}}</label>
-    <mat-form-field>
-      <form [formGroup]="callPlanningForm" (ngSubmit)="callPlanningFormSubmit()">
-          <input formControlName="amountCalls"
-                 matInput
-                 placeholder="Введите количество звонков">
-
-          <button mat-button type="submit">Принять</button>
-      </form>
-    </mat-form-field>
-  </div>
-</ng-container>
-
 
 <mat-card>
   <mat-card-header>
     <mat-card-title>Список Клиентов</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-   <table mat-table [dataSource]="clients">
+   <table mat-table matSort [dataSource]="dataSource">
      <ng-container matColumnDef="id">
        <th mat-header-cell *matHeaderCellDef> # </th>
        <td mat-cell *matCellDef="let client"> {{client.id}} </td>
      </ng-container>
      <ng-container matColumnDef="title">
-       <th mat-header-cell *matHeaderCellDef> Имя </th>
+       <th mat-header-cell *matHeaderCellDef mat-sort-header> Имя </th>
        <td mat-cell *matCellDef="let client"> {{client.title}} </td>
      </ng-container>
      <ng-container matColumnDef="phone">
-       <th mat-header-cell *matHeaderCellDef> Телефон </th>
+       <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон </th>
        <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
      </ng-container>
      <ng-container matColumnDef="plannedAmountCalls">
-        <th mat-header-cell *matHeaderCellDef> Запланировано звонков </th>
+        <th mat-header-cell *matHeaderCellDef> Звонки <br> Сделано | Запланировано </th>
         <td mat-cell *matCellDef="let client">
           <ng-container *ngIf="client.plannedAmountCalls">
-              {{client.plannedAmountCalls}}
+             <strong>0</strong> | <strong>{{client.plannedAmountCalls}}</strong>
           </ng-container>
           <ng-container *ngIf="!client.plannedAmountCalls">
-            <button mat-button (click)="callPlanningOpen(client.id, client.title)">Запланировать звонки</button>
+            <button mat-raised-button class="mat-primary" (click)="callPlanningOpen(client.id, client.title)">Запланировать звонки</button>
           </ng-container>                     
         </td>
      </ng-container>   
