не забирать пока

--- a/WebUI/wwwroot/src/styles.sass
+++ b/WebUI/wwwroot/src/styles.sass
@@ -35,3 +35,10 @@ mat-form-field
   width: 100%
   input
 	  width: 100%
+
+.img-responsive
+	display: block
+	max-width: 100%
+	height: auto
+	&.img-width
+		width: 100%
