--- a/WebUI/wwwroot/src/app/manager/components/client-list/manager-calls-dialog.html
+++ b/WebUI/wwwroot/src/app/manager/components/client-list/manager-calls-dialog.html
@@ -15,7 +15,7 @@
           <ng-container matColumnDef="record">
             <th mat-header-cell *matHeaderCellDef> Запись </th>
             <td mat-cell *matCellDef="let element"> 
-                <a href="{{element.record}}" mat-raised-button class="mat-primary">Прослушать</a>
+                <a href="{{element.record}}" mat-raised-button class="mat-primary">Скачать</a>
             </td>
           </ng-container>
       
@@ -28,5 +28,5 @@
 </div>
 <div mat-dialog-actions align="center">
     <button mat-raised-button class="mat-primary" [mat-dialog-close]="data" cdkFocusInitial>Сохранить</button>
-    <button mat-button (click)="onNoClick()">Закрыть</button> 
+    <button mat-button (click)="callsDialogClose()">Закрыть</button> 
 </div>
