--- a/WebUI/wwwroot/src/app/manager/components/client-list/manager-calls-dialog.html
+++ b/WebUI/wwwroot/src/app/manager/components/client-list/manager-calls-dialog.html
@@ -27,6 +27,5 @@
         
 </div>
 <div mat-dialog-actions align="center">
-    <button mat-raised-button class="mat-primary" [mat-dialog-close]="data" cdkFocusInitial>Сохранить</button>
-    <button mat-button (click)="onNoClick()">Закрыть</button> 
+    <button class="mat-primary" mat-raised-button mat-button (click)="onNoClick()">Закрыть</button> 
 </div>
