--- a/WebUI/wwwroot/src/app/manager/components/client-list/monthly-call-plan-dialog.html
+++ b/WebUI/wwwroot/src/app/manager/components/client-list/monthly-call-plan-dialog.html
@@ -13,6 +13,7 @@
     <input type="number" matInput [(ngModel)]="data.amountCalls">
   </mat-form-field>
 </div>
-<div mat-dialog-actions align="center">  
-    <button mat-raised-button class="mat-primary" (click)="onNoClick()">Закрыть</button> 
+<div mat-dialog-actions align="center">
+    <button mat-raised-button class="mat-primary" [mat-dialog-close]="data" cdkFocusInitial>Сохранить</button>
+    <button mat-raised-button (click)="onNoClick()">Закрыть</button> 
 </div>
