--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -20,10 +20,10 @@
         <th mat-header-cell *matHeaderCellDef> Запланировано звонков </th>
         <td mat-cell *matCellDef="let client">
           <ng-container *ngIf="client.plannedAmountCalls">
-            {{client.plannedAmountCalls}}
+            <button mat-raised-button class="mat-primary table-button"> {{client.plannedAmountCalls}} </button>
           </ng-container>
           <ng-container *ngIf="!client.plannedAmountCalls">
-              <button mat-button> Не составлено </button>
+            <button mat-raised-button class="mat-primary table-button"> Не составлено </button>
           </ng-container>          
         </td>
       </ng-container>            
