--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -3,6 +3,9 @@
     <mat-card-title>Список клиентов</mat-card-title>
   </mat-card-header>
   <mat-card-content>
+    <div align="right">
+        <button mat-fab color="primary" style="font-size: 24px" (click)="addNewClient()">+</button>
+    </div>    
     <table mat-table [dataSource]="clients">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>id</th>
@@ -26,7 +29,14 @@
             <button mat-raised-button class="mat-primary table-button"> Не составлено </button>
           </ng-container>          
         </td>
-      </ng-container>            
+      </ng-container> 
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Действие</th>
+        <td mat-cell *matCellDef="let client">
+          <button mat-raised-button class="mat-primary" (click)="editClient(client)" style="margin-right: 5px"><i class="fas fa-pen"></i></button>
+          <button mat-raised-button class="mat-primary" (click)="deleteClient(client.id)"><i class="fas fa-trash-alt"></i></button>
+        </td>
+      </ng-container>           
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
