--- a/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/user-list/user-list.component.html
@@ -3,6 +3,9 @@
     <mat-card-title>Список Менеджеров</mat-card-title>
   </mat-card-header>
 <mat-card-content>
+    <div align="right">
+        <button mat-fab color="primary" style="font-size: 24px" (click)="addNewManager()">+</button>
+    </div>
     <table mat-table [dataSource]="managers" >
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>id</th>
@@ -20,6 +23,13 @@
         <th mat-header-cell *matHeaderCellDef>Телефон</th>
         <td mat-cell *matCellDef="let manager">{{manager.phone}}</td>
       </ng-container>
+      <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Действие</th>
+          <td mat-cell *matCellDef="let client">
+            <button mat-raised-button class="mat-primary" (click)="editManager(client)" style="margin-right: 5px"><i class="fas fa-pen"></i></button>
+            <button mat-raised-button class="mat-primary" (click)="deleteManager(client.id)"><i class="fas fa-trash-alt"></i></button>
+          </td>
+        </ng-container> 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
