фикс заголовка модальки

--- a/WebUI/wwwroot/src/app/admin/components/user-list/manager-create-dialog.html
+++ b/WebUI/wwwroot/src/app/admin/components/user-list/manager-create-dialog.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Создание нового клиента</h1>
+<h1 mat-dialog-title>Создание нового менеджера</h1>
 <div mat-dialog-content>
   <form [formGroup]="createManagerForm">
     <mat-form-field>
