--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -33,12 +33,11 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Действие</th>
         <td mat-cell *matCellDef="let client">
-          <button mat-raised-button class="mat-primary" (click)="editClient(client)" style="margin-right: 5px"><i class="fas fa-pen"></i></button>
           <button mat-raised-button class="mat-primary" (click)="deleteClient(client.id)"><i class="fas fa-trash-alt"></i></button>
         </td>
       </ng-container>           
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="detailClient(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
