--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-detail-dialog.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-detail-dialog.html
@@ -8,7 +8,7 @@
         <input type="text" matInput placeholder="Телефон" formControlName="phone">
     </mat-form-field>
   </form>
-  <table mat-table [dataSource]="dataSource.data.currentManagers">
+  <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="login">
         <th mat-header-cell *matHeaderCellDef> Логин </th>
         <td mat-cell *matCellDef="let element"> {{element.login}} </td>
