--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -37,7 +37,7 @@
         </td>
       </ng-container>           
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="detailClient(row)"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" (dblclick)="detailClient(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 50, 100]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
