--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-detail-dialog.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-detail-dialog.html
@@ -8,11 +8,19 @@
         <input type="text" matInput placeholder="Телефон" formControlName="phone">
     </mat-form-field>
   </form>
+  <h2 mat-dialog-title style="display: inline-block">Привязанные за клиентом менеджеры</h2>
+  <div align="right" style="float: right">
+    <button mat-mini-fab color="primary" style="font-size: 14px" (click)="bindManager()">+</button>
+  </div> 
   <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="login">
         <th mat-header-cell *matHeaderCellDef> Логин </th>
         <td mat-cell *matCellDef="let element"> {{element.login}} </td>
       </ng-container>    
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Действие </th>
+        <td mat-cell *matCellDef="let element"><button mat-raised-button class="mat-primary" (click)="unbindManager(element.id)" ><i class="fas fa-trash-alt"></i></button> </td>
+      </ng-container> 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>  
   </table>
