--- a/WebUI/wwwroot/src/app/admin/components/client-list/dialogs/manager-client/manager-client-dialog.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/dialogs/manager-client/manager-client-dialog.html
@@ -14,7 +14,7 @@
         <td mat-cell *matCellDef="let element"> {{element.plannedAmountCalls}} </td>
       </ng-container>    
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="openManagerCalls(row.id)"></tr>  
+      <tr style="cursor: pointer" mat-row *matRowDef="let row; columns: displayedColumns" (click)="openManagerCalls(row.id)"></tr>  
   </table>
   
 </div>
