--- a/WebUI/wwwroot/src/app/admin/containers/client/client.component.html
+++ b/WebUI/wwwroot/src/app/admin/containers/client/client.component.html
@@ -1,1 +1,1 @@
-<app-client-list [clients]="clients$ | async"></app-client-list>
+<app-client-list [clients]="clients$ | async" [managers]="managers$ | async"></app-client-list>
