--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -20,10 +20,10 @@
         <td mat-cell *matCellDef="let client">{{client.phone}}</td>
       </ng-container>
       <ng-container matColumnDef="plannedAmountCalls">
-        <th mat-header-cell *matHeaderCellDef> Запланировано звонков </th>
+        <th mat-header-cell *matHeaderCellDef> Звонки <br> Сделано | Запланировано </th>
         <td mat-cell *matCellDef="let client">
           <ng-container *ngIf="client.plannedAmountCalls">
-            <button mat-raised-button class="mat-primary table-button" (click)="callPlanDetail(client.managers)"> {{client.plannedAmountCalls}} </button>
+            <button mat-raised-button class="mat-primary table-button" (click)="callPlanDetail(client.managers)"> {{client.amountCalls}} | {{client.plannedAmountCalls}} </button>
           </ng-container>
           <ng-container *ngIf="!client.plannedAmountCalls">
             <button mat-raised-button class="mat-primary table-button"> Не составлено </button>
