--- a/WebUI/wwwroot/src/app/admin/layout/topline/topline.component.html
+++ b/WebUI/wwwroot/src/app/admin/layout/topline/topline.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav-menu">
       <li>
-          <a href="/Account/Logout">
+          <a routerLink="">
               <i class="fas fa-sign-out-alt fa-2x"></i>
           </a>
       </li>
