--- a/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/wwwroot/src/app/admin/components/client-list/client-list.component.html
@@ -5,8 +5,13 @@
   <mat-card-content>
     <div align="right">
         <button mat-fab color="primary" style="font-size: 24px" (click)="addNewClient()">+</button>
+    </div>
+    <div align="center">
+        <mat-spinner *ngIf="loading">
+      </mat-spinner>
     </div>    
-    <table mat-table [dataSource]="clients">
+    
+    <table *ngIf="!loading" mat-table [dataSource]="clients">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>id</th>
         <td mat-cell *matCellDef="let client">{{client.id}}</td>
