--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-create-dialog.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-create-dialog.html
@@ -7,6 +7,11 @@
     <mat-form-field>
         <input type="text" matInput placeholder="Телефон" formControlName="phone">
     </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Не указан" formControlName="legalEntity">
+        <mat-option *ngFor="let item of legalEntities" [value]="item">{{item}}</mat-option>
+      </mat-select>
+  </mat-form-field>
   </form>
 </div>
 <div mat-dialog-actions align="center">
