--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-detail-dialog.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-detail-dialog.html
@@ -7,6 +7,11 @@
     <mat-form-field>
         <input type="text" matInput placeholder="Телефон" formControlName="phone">
     </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Не указан" formControlName="legalEntity">
+        <mat-option *ngFor="let item of legalEntities" [value]="item">{{item}}</mat-option>
+      </mat-select>
+    </mat-form-field>
   </form>
   <h2 mat-dialog-title style="display: inline-block">Привязанные за клиентом менеджеры</h2>
   <div align="right" style="float: right">
