--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-detail-dialog.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-detail-dialog.html
@@ -8,7 +8,7 @@
         <input type="text" matInput placeholder="Телефон" formControlName="phone">
     </mat-form-field>
     <mat-form-field>
-      <mat-select placeholder="Не указан" formControlName="legalEntity">
+      <mat-select placeholder="Юр. лицо" formControlName="legalEntity">
         <mat-option *ngFor="let item of legalEntities" [value]="item">{{item}}</mat-option>
       </mat-select>
     </mat-form-field>
