--- a/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager/components/client-list/client-list.component.html
@@ -25,6 +25,10 @@
       <th mat-header-cell *matHeaderCellDef>Кол-во звонков</th>
       <td mat-cell *matCellDef="let client">{{client.numberOfCalls | numberOfCallsTranslate}}</td>
     </ng-container>
+    <ng-container matColumnDef="numberOfShipments">
+      <th mat-header-cell *matHeaderCellDef>Кол-во отгрузок</th>
+      <td mat-cell *matCellDef="let client">{{client.numberOfShipments | numberOfShipmentsTranslate}}</td>
+    </ng-container>
      <ng-container matColumnDef="phone">
        <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон </th>
        <td mat-cell *matCellDef="let client"> {{client.phone}} </td>
