--- a/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/components/client-list/client-list.component.html
@@ -47,6 +47,17 @@
           </ng-container>          
         </td>
       </ng-container> 
+      <ng-container matColumnDef="plannedAmountTrips">
+        <th mat-header-cell *matHeaderCellDef> Командировки <br> Сделано | Запланировано </th>
+        <td mat-cell *matCellDef="let client">
+          <ng-container *ngIf="client.plannedAmountTrips">
+             <button mat-raised-button class="mat-primary table-button">{{client.amountTrips}} | {{client.plannedAmountTrips}}</button>
+          </ng-container>
+          <ng-container *ngIf="!client.plannedAmountTrips">
+            <button mat-raised-button class="mat-primary table-button" (click)="openPlannedTrips(client.id, client.title)">Запланировать</button>  
+          </ng-container>                 
+        </td>
+     </ng-container> 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Действие</th>
         <td mat-cell *matCellDef="let client">
